[package]
name = "quartermaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadqueue = "0.2.3"
async-trait = "0.1.58"
tokio = { version = "1.21.2", features = ["rt", "time"]}
log = "0.4.17"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"]}