[package]
name = "quartermaster"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadqueue = "0.2.3"
async-trait = "0.1.58"
tokio = {version = "1.21.2", features = ["rt", "time"]}
log = "0.4.17"
mongodb = {version = "2.2.2", features = ["tokio-runtime"], optional = true, default-features = false}
serde = {version = "1.0.137", optional = true}
futures = {version = "0.3.25", optional = true}

[dev-dependencies]
tokio = {version = "1.21.2", features = ["full"]}

[features]
default = []
serde = ["dep:serde"]
mongodb =["dep:mongodb","dep:futures", "serde"]